se creó la estructura del login y se hizo pequeñas modificaciones al registro

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/login.css">
+    <title>Iniciar Sesión</title>
 </head>
 <body>
-    
+    <div>
+        <form>
+            <h1>Iniciar Sesión</h1>
+            <div id="caja-usuario">
+            <label class="label-usuario">Usuario</label> <br>
+            <input type="text" required> <br>
+            </div>
+            <div id="caja-contraseña">
+            <label class="label-contraseña">Contraseña</label> <br>
+            <input type="password" required> <br>
+            </div>
+            <input type="submit" id="campo-loguearse" value="entrar"> <br>
+            <p>¿No tienes una cuenta?<br><a href="register.html">Registrate</a></p>
+
+        </form>
+    </div>
 </body>
 </html>
