--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -18,8 +18,8 @@
             <input type="date" name="fecha"> <br>
             <input type="submit" class="campo-registrarse" value="Registrarse" >
             <p>
-                ¿ya tienes una cuenta? <br>
-                <a href="login.html">inicia sesión</a><p>
+                ¿Ya tienes una cuenta? <br>
+                <a href="login.html">Inicia sesión</a>
             </p>
         </form>
     </div>
