--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="./css/variables.css">
     <title>Registro</title>
 </head>
 <body>
     <div>
         <form>
             <h1>
-                Bienvenido a Imago
+                ¡Bienvenido a Imago!
             </h1>
             <input type="text" placeholder="nombre de usuario" > <br>
             <input type="password" placeholder="contraseña"> <br>
