se agrego el html y css de create-pin también se agregaron mas fuentes y estilos a variables

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -313,6 +313,7 @@
             const homeBtn = document.querySelector(".icon-bar.home");
             const searchBtn = document.querySelector(".icon-bar.search");
             const addBtn = document.querySelector(".icon-bar.add");
+            const imgUser = document.querySelector(".user-avatar")
 
             homeBtn.addEventListener("click", () => {
                 window.location.href = "index.html"; 
@@ -325,6 +326,7 @@
             addBtn.addEventListener("click", () => {
                 window.location.href = "create-pin.html";
             });
+
         });
     </script>
     <script> //para que funcione el boton de ordenar
