se hizo el diseño del login y se corrigió parte del html

--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="./css/variables.css">
     <title>Iniciar Sesión</title>
 </head>
 <body>
@@ -18,7 +19,7 @@
             <label class="label-contraseña">Contraseña</label> <br>
             <input type="password" required> <br>
             </div>
-            <input type="submit" id="campo-loguearse" value="entrar"> <br>
+            <button type="submit" id="campo-loguearse">entrar</button> <br>
             <p>¿No tienes una cuenta?<br><a href="register.html">Registrate</a></p>
 
         </form>
