--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -10,12 +10,17 @@
 <body>
     <div>
         <form>
+            <div class="top-logo">
+                <div class="logo">
+                    <img src="./img/face_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Logo de la página">
+                </div>
+            </div>
             <h1>
                 ¡Bienvenido a Imago!
             </h1>
-            <input type="text" placeholder="nombre de usuario" > <br>
-            <input type="password" placeholder="contraseña"> <br>
-            <input type="password" placeholder="repetir contraseña"> <br>
+            <input type="text" placeholder="Nombre de usuario" > <br>
+            <input type="password" placeholder="Contraseña"> <br>
+            <input type="password" placeholder="Repetir contraseña"> <br>
             <input type="date" name="fecha"> <br>
             <input type="submit" class="campo-registrarse" value="Registrarse" >
             <p>
