--- a/Frontend/perfil.html
+++ b/Frontend/perfil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil de Usuario</title>
+    <title id="page-title">Perfil de Usuario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/perfil.css">
@@ -20,42 +20,39 @@
             
             <div class="tableros-content">
                 <h2 class="section-title">Tus tableros</h2>
-                <div class="tableros-container"></div>
-
+                <div class="tableros-container" id="tableros-container"></div>
             </div>
 
             <div class="searches-content" style="display: none;">
                 <h2 class="section-title">Búsquedas personalizadas</h2>
-
                 <div id="lista-busquedas"></div>
             </div>
-
         </div>
         
         <div class="derecha-section">
             <div class="profile-card">
                 <div class="profile-photo">
-                    <img src="./img/[940] avatar 𓂃꙳⋆.jpeg" alt="Foto de perfil" class="profile-image">
-                    <div class="profile-name">Blueberries_782!</div>
-                    <div class="profile-date">1999</div>
+                    <img src="" alt="Foto de perfil" class="profile-image" id="profile-image">
+                    <div class="profile-name" id="profile-name">Cargando...</div>
+                    <div class="profile-date" id="profile-date"></div>
                 </div>
 
                 <div class="profile-estadisticas">
                     <div class="estadistica estadistica-tableros">
                         <i class="fa-solid fa-table estadistica-icon"></i>
-                        <span class="estadistica-number" id="estadistica-tableros">24</span>
+                        <span class="estadistica-number" id="estadistica-tableros">0</span>
                         <span class="estadistica-label">Tableros</span>
                     </div>
 
-                    <div class="estadistica estadistica-publicaciones">
+                    <div class="estadistica estadistica-busquedas">
                         <i class="fa-solid fa-magnifying-glass estadistica-icon"></i>
-                        <span class="estadistica-number" id="estadistica-publicaciones">347</span>
+                        <span class="estadistica-number" id="estadistica-busquedas">0</span>
                         <span class="estadistica-label">Búsquedas personalizadas</span>
                     </div>
 
                     <div class="estadistica estadistica-likes">
-                        <i class="fas fa-heart estadistica-icon"></i>
-                        <span class="estadistica-number" id="estadistica-likes">1.2K</span>
+                        <i class="fas fa-bookmark"></i>
+                        <span class="estadistica-number" id="estadistica-likes">0</span>
                         <span class="estadistica-label">Likes</span>
                     </div>
                 </div>
@@ -68,24 +65,6 @@
         </div>
     </div>
     <script src="./JS/navbar.js"></script>
-    <script src="./JS/tableros.js"></script>
-    <script src="./JS/busquedas.js"></script>
-    <script>
-        document.querySelectorAll('.nav-option').forEach(option => {
-            option.addEventListener('click', function() {
-                document.querySelectorAll('.nav-option').forEach(opt => {
-                    opt.classList.remove('active');
-                });
-                this.classList.add('active');
-                if (this.textContent === 'Tableros') {
-                    document.querySelector('.tableros-content').style.display = 'block';
-                    document.querySelector('.searches-content').style.display = 'none';
-                } else {
-                    document.querySelector('.tableros-content').style.display = 'none';
-                    document.querySelector('.searches-content').style.display = 'block';
-                }
-            });
-        });
-    </script>
+    <script src="./JS/perfil.js"></script> 
 </body>
-</html>
+</html>+
