--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/variables.css">
+    <link rel="icon" href="./img/logo (4).png" type="image/x-icon" style="border-radius: 50%;">
     <title>inicio</title>
 </head>
 <body>
