Se movio Frontend a front

--- a/front/create-pin.html
+++ b/front/create-pin.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/create-pin.css">
-    <link rel="stylesheet" href="./css/variables.css">
+    <link rel="stylesheet" href="cssreate-pin.css">
+    <link rel="stylesheet" href="cssariables.css">
     <title></title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <div class="add-pin upload-container">
                 <div class="pin-container">
                     <a class="imagen-small">
-                        <img src="./img/add_photo_alternate_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" class="pin">
+                        <img src="imgdd_photo_alternate_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" class="pin">
                         <span>Eligue una imagen</span>
                     </a>
                     <input type="file" accept="image/*" class="file-input" style="display: none;">
