--- a/front/navbar.html
+++ b/front/navbar.html
@@ -4,27 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/navbar.css">
+    <link rel="stylesheet" href="cssavbar.css">
 </head>
 <body>
     <nav class="sidebar">
         <div class="sidebar-top">
             <div class="logo">
-                <img src="./img/logo (4).png" alt="Logo de la página">
+                <img src="imgogo%20(4).png" alt="Logo de la página">
             </div>
         </div>
         <div class="sidebar-middle">
             <button class="icon-bar home" aria-label="Inicio">
                 <div class="hover-effect"></div>
-                <img src="./img/home_app_logo_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Inicio">
+                <img src="imgome_app_logo_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Inicio">
             </button>
             <button class="icon-bar add" aria-label="Agregar" id="add-button">
                 <div class="hover-effect"></div>
-                <img src="./img/add_box_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Agregar">
+                <img src="imgdd_box_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Agregar">
             </button>
             <button class="icon-bar search" aria-label="Buscar">
                 <div class="hover-effect"></div>
-                <img src="./img/explore_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Buscar">
+                <img src="imgxplore_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Buscar">
             </button>
             
             <div class="dropdown-menu" id="dropdown-menu">
@@ -41,11 +41,11 @@
         </div>
         <div class="sidebar-bottom">
             <button class="user-avatar" aria-label="Perfil de usuario" id="profile-button">
-                <img src="./img/[940] avatar 𓂃꙳⋆.jpeg" alt="Foto de usuario">
+                <img src="img5B940%5D%20avatar%20𓂃꙳⋆.jpeg" alt="Foto de usuario">
             </button>
         </div>
     </nav>
     <div class="overlay" id="overlay"></div>
-    <script src="./JS/navbar.js"></script>
+    <script src="JSavbar.js"></script>
 </body>
 </html>
