Se arreglaron paths erroneos en los .html

--- a/front/index.html
+++ b/front/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cssndex.css">
-    <link rel="stylesheet" href="cssariables.css">
-    <link rel="icon" href="imgogo%20(4).png" type="image/x-icon" style="border-radius: 50%;">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="icon" href="img/logo%20(4).png" type="image/x-icon" style="border-radius: 50%;">
     <title>inicio</title>
 </head>
 <body>
     <div class="container">
         <div id="navbar-container"></div>
         <main class="main-content">
-            <header class="top-section" role="toolbar"> 
+            <header class="top-section" role="toolbar">
                 <form class="search-bar" role="search"> 
                     <span class="search-icon">
-                        <img src="imgearch_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" >
+                        <img src="img/search_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" >
                     </span>
                     <input class="search-input" type="search" aria-label="Buscar contenido"/>
                 </form>
                 
                 <button class="order-by" aria-label="Ordenar por">
                     <span class="icon order">
-                        <img src="imgompare_arrows_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Ordenar">
+                        <img src="img/compare_arrows_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Ordenar">
                     </span>
                     <p>Ordenar por</p>
                 </button>
@@ -38,7 +38,7 @@
             </section>
         </main>
     </div>
-    <script src="JSavbar.js"></script>
-    <script src="JSines.js"></script>
+    <script src="JS/navbar.js"></script>
+    <script src="JS/pines.js"></script>
 </body>
 </html>
