--- a/front/login.html
+++ b/front/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cssogin.css">
-    <link rel="stylesheet" href="cssariables.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/variables.css">
     <title>Iniciar Sesión</title>
 </head>
 <body>
