--- a/front/perfil.html
+++ b/front/perfil.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title id="page-title">Perfil de Usuario</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="cssariables.css">
-    <link rel="stylesheet" href="csserfil.css">
-    <link rel="icon" href="imgogo%20(4).png" type="image/x-icon" style="border-radius: 50%;">
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/perfil.css">
+    <link rel="icon" href="img/logo%20(4).png" type="image/x-icon" style="border-radius: 50%;">
 </head>
 <body>
     <div class="container">
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <script src="JSavbar.js"></script>
-    <script src="JSerfil.js"></script>
+    <script src="JS/navbar.js"></script>
+    <script src="JS/perfil.js"></script>
 </body>
 </html>
