--- a/front/register.html
+++ b/front/register.html
@@ -19,9 +19,13 @@
                 ¡Bienvenido a Imago!
             </h1>
             <input type="text" name="usuario" placeholder="Nombre de usuario" > <br>
-            <input type="password" name="contraseña" placeholder="Contraseña"> <br>
-            <input type="password" name="repetir_contraseña" placeholder="Repetir contraseña"> <br>
+            <input type="email" name="email" placeholder="Correo" > <br>
+            <input type="password" name="contrasena" placeholder="Contraseña"> <br>
+            <input type="password" name="repetir_contrasena" placeholder="Repetir contraseña"> <br>
             <input type="date" name="fecha"> <br>
+            <div id="mensaje-error">
+
+            </div>
             <input type="submit" class="campo-registrarse" value="Registrarse" >
             <p>
                 ¿Ya tienes una cuenta? <br>
@@ -29,6 +33,6 @@
             </p>
         </form>
     </div>
-    <script src="register.js"></script>
+    <script src="JS/register.js"></script>
 </body>
 </html>
