se hicieron las validaciones del registro del lado del front

--- a/front/register.html
+++ b/front/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <form id="form-registro">
+        <form id="form-registro" novalidate>
             <div class="top-logo">
                 <div class="logo">
                     <img src="./img/face_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Logo de la página">
