--- a/front/register.html
+++ b/front/register.html
@@ -23,7 +23,7 @@
             <input type="password" name="contrasena" placeholder="Contraseña"> <br>
             <input type="password" name="repetir_contrasena" placeholder="Repetir contraseña"> <br>
             <input type="date" name="fecha"> <br>
-            <div id="mensaje-error">
+            <div id="mensaje-error-aviso">
 
             </div>
             <input type="submit" class="campo-registrarse" value="Registrarse" >
