se actualizaron las conexiones con API

--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="icon" href="img/logo%20(4).png" type="image/x-icon" style="border-radius: 50%;">
-    <title>inicio</title>
+    <title>Imago-★</title>
 </head>
 <body>
     <div class="container">
@@ -38,7 +38,8 @@
             </section>
         </main>
     </div>
+    <div id="card-modal" class="card-modal" style="display: none;"></div>
     <script src="JS/navbar.js"></script>
-    <script src="JS/pines.js"></script>
+    <script src="JS/pines.js?v=1.0.1"></script>
 </body>
 </html>
