--- a/front/perfil.html
+++ b/front/perfil.html
@@ -14,7 +14,7 @@
         <div id="navbar-container"></div>
         <div class="izq-section">
             <div class="navigation-options">
-                <div class="nav-option active">Mis publicaciones</div>
+                <div class="nav-option active">Publicaciones</div>
                 <div class="nav-option">Tableros</div>
                 <div class="nav-option">Búsquedas personalizadas</div>
             </div>
