carga de archivo javascript para redirigir al hacer un registro

--- a/front/register.html
+++ b/front/register.html
@@ -34,5 +34,6 @@
         </form>
     </div>
     <script src="JS/register.js"></script>
+    <script src="JS/pines.js"></script>
 </body>
 </html>
