se agrego el register, se soluciono el problema del modal del perfil, se agrego el boton de eliminar cuenta (no funciona aun)

--- a/front/register.html
+++ b/front/register.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/register.css">
-    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="./css/register.css">
+    <link rel="stylesheet" href="./css/variables.css">
     <title>Registro</title>
 </head>
 <body>
     <div>
-        <form>
+        <form id="form-registro" novalidate>
+            <div class="top-logo">
+                <div class="logo">
+                    <img src="./img/face_24dp_47413E_FILL0_wght400_GRAD0_opsz24.svg" alt="Logo de la página">
+                </div>
+            </div>
             <h1>
                 ¡Bienvenido a Imago!
             </h1>
-            <input type="text" placeholder="nombre de usuario" > <br>
-            <input type="password" placeholder="contraseña"> <br>
-            <input type="password" placeholder="repetir contraseña"> <br>
+            <input type="text" name="usuario" placeholder="Nombre de usuario" > <br>
+            <input type="email" name="email" placeholder="Correo" > <br>
+            <input type="password" name="contrasena" placeholder="Contraseña"> <br>
+            <input type="password" name="repetir_contrasena" placeholder="Repetir contraseña"> <br>
             <input type="date" name="fecha"> <br>
+            <div id="mensaje-error-aviso">
+
+            </div>
             <input type="submit" class="campo-registrarse" value="Registrarse" >
             <p>
                 ¿Ya tienes una cuenta? <br>
@@ -24,5 +33,7 @@
             </p>
         </form>
     </div>
+    <script src="JS/register.js"></script>
+    <script src="JS/pines.js"></script>
 </body>
 </html>
