--- a/front/perfil.html
+++ b/front/perfil.html
@@ -86,7 +86,7 @@
             <div class="modal-content">
                 <div class="modal-avatar">
                     <div class="avatar-box">
-                    <img src="img/[940] avatar 𓂃꙳⋆.jpeg" alt="Foto de perfil" class="profile-image-edit" id="profile-image-edit">
+                    <img src="" alt="Foto de perfil" class="profile-image-edit" id="profile-image-edit">
                     <i class="fa-solid fa-pencil"></i>
                     </div>
                 </div>
