--- a/front/index.html
+++ b/front/index.html
@@ -9,7 +9,7 @@
     <title>Imago-★</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container con-navbar">
         <div id="navbar-container"></div>
         <main class="main-content">
             <header class="top-section" role="toolbar">
