--- a/front/index.html
+++ b/front/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="img/logo%20(4).png" type="image/x-icon" style="border-radius: 50%;">
+    <link rel="icon" href="img/logo-transp.png" type="image/x-icon" style="border-radius: 50%;">
     <title>Imago-★</title>
 </head>
 <body>
