integración completa de inicio y registro con la API y manejo de imágenes

--- a/front/navbar.html
+++ b/front/navbar.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
     <link rel="stylesheet" href="css/navbar.css">
 </head>
 <body>
     <nav class="sidebar">
         <div class="sidebar-top">
             <div class="logo">
-                <img src="img/logo%20(4).png" alt="Logo de la página">
+                <img src="img/logo.png" alt="Logo de la página">
             </div>
         </div>
         <div class="sidebar-middle">
