--- a/front/create-pin.html
+++ b/front/create-pin.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/create-pin.css">
     <link rel="stylesheet" href="css/variables.css">
+    <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
     <title></title>
 </head>
 <body>
