--- a/front/login.html
+++ b/front/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/variables.css">
+    <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
     <title>Iniciar Sesión</title>
 </head>
 <body>
@@ -16,8 +17,8 @@
             <input type="text" name="usuario" required> <br>
             </div>
             <div id="caja-contraseña">
-            <label class="label-contraseña">Contraseña</label> <br>
-            <input type="password" name="contraseña" required> <br>
+            <label class="label-contrasenia">Contraseña</label> <br>
+            <input type="password" name="contrasenia" required> <br>
             </div>
             <div id="mensaje-login">
             </div>
