--- a/front/perfil.html
+++ b/front/perfil.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/perfil.css">
-    <link rel="icon" href="img/logo%20(4).png" type="image/x-icon" style="border-radius: 50%;">
+    <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
