se creo card.js para reutilizar la funcion de listar cards

--- a/front/create-pin.html
+++ b/front/create-pin.html
@@ -65,6 +65,6 @@
             <input type="hidden" name="usuario_id" value="">
         </div>
     </form>
-    <script src="JS/create-pin.js"></script>
+    <script type="module" src="JS/create-pin.js"></script>
 </body>
 </html>
