--- a/front/index.html
+++ b/front/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/componentes/card.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
     <title>Imago-★</title>
@@ -33,7 +34,8 @@
         </main>
     </div>
     <div id="card-modal" class="card-modal" style="display: none;"></div>
-    <script src="JS/navbar.js"></script>
-    <script src="JS/pines.js"></script>
+    <script type="module" src="JS/navbar.js"></script>
+    <script type="module" src="JS/componentes/card.js"></script>
+    <script type="module" src="JS/pines.js"></script>
 </body>
 </html>
