--- a/front/login.html
+++ b/front/login.html
@@ -27,7 +27,7 @@
 
         </form>
     </div>
-    <script src="JS/login.js"></script>
-    <script src="JS/pines.js"></script>
+    <script type="module" src="JS/login.js"></script>
+    <script type="module" src="JS/pines.js"></script>
 </body>
 </html>
