--- a/front/perfil.html
+++ b/front/perfil.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/perfil.css">
+    <link rel="stylesheet" href="css/componentes/card.css">
     <link rel="icon" href="img/logo-transp.png" type="image/x-icon">
 </head>
 <body>
@@ -108,8 +109,9 @@
         </div>
     </div>
 
-    <script src="JS/navbar.js"></script>
-    <script src="JS/perfil.js"></script>
+    <script type="module" src="JS/navbar.js"></script>
+    <script type="module" src="JS/componentes/card.js"></script>
+    <script type="module" src="JS/perfil.js"></script>
 
 </body>
 </html>
