--- a/front/register.html
+++ b/front/register.html
@@ -36,7 +36,7 @@
             </p>
         </form>
     </div>
-    <script src="JS/register.js"></script>
-    <script src="JS/pines.js"></script>
+    <script type="module" src="JS/register.js"></script>
+    <script type="module" src="JS/pines.js"></script>
 </body>
 </html>
