--- a/front/navbar.html
+++ b/front/navbar.html
@@ -46,6 +46,6 @@
         </div>
     </nav>
     <div class="overlay" id="overlay"></div>
-    <script src="JS/navbar.js"></script>
+    <script type="module" src="JS/navbar.js"></script>
 </body>
 </html>
